# niri-caelestia-shell

./: .gitignore  README.md  shell.qml
components/: CAnim.qml  Card.qml  Chip.qml  CollapsibleSection.qml  ConnectionHeader.qml  ConnectionInfoSection.qml  FocusRing.qml  MaterialIcon.qml  PropertyRow.qml  ReloadPopup.qml  SectionContainer.qml  SectionHeader.qml  StateLayer.qml  StyledText.qml
components/controls/: CircularIndicator.qml  CircularProgress.qml  CustomSpinBox.qml  FilledSlider.qml  IconButton.qml  IconTextButton.qml  Menu.qml  SpinBoxRow.qml  SplitButton.qml  SplitButtonRow.qml  StyledBusyIndicator.qml  StyledInputField.qml  StyledRadialButton.qml  StyledRadioButton.qml  StyledScrollBar.qml  StyledSwitch.qml  StyledTextField.qml  SwitchRow.qml  TextButton.qml  ToggleButton.qml  ToggleRow.qml  Tooltip.qml
components/effects/: InnerBorder.qml
components/filedialog/: CurrentItem.qml  DialogButtons.qml  FolderContents.qml  HeaderBar.qml  Sidebar.qml
components/widgets/: ExtraIndicator.qml  NotificationList.qml  WindowDecorations.qml
config/: AppearanceConfig.qml  BarConfig.qml  BorderConfig.qml  Config.qml  DashboardConfig.qml  LockConfig.qml
dotfiles/caelestia-sddm-theme/: Main.qml  setup.sh  test.sh
dotfiles/fish/: config.fish
modules/areapicker/: AreaPicker.qml  Picker.qml
nix/: default.nix
plugin/: CMakeLists.txt
plugin/src/Caelestia/Services/: CMakeLists.txt  networkmanager.cpp  networkmanager.hpp  sysmonitor.cpp  sysmonitor.hpp
services/: Colours.qml  Manga.qml  Network.qml  Nmcli.qml  Novel.qml  SystemUsage.qml
(+170 files in other folders)
